# project2-clothing-shop-miniapp

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  main.py  seed.py
backend/app/api/routes/: admin.py  auth.py  catalog.py  checkout.py  commerce.py  health.py  meta.py
backend/app/audit/: service.py
backend/app/auth/: dependencies.py  models.py  schemas.py  service.py  telegram.py
backend/app/bot/: __init__.py  main.py
backend/app/catalog/: models.py  schemas.py  service.py
backend/app/checkout/: __init__.py  models.py  schemas.py  service.py  worker.py
backend/app/commerce/: __init__.py  models.py  schemas.py  service.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: base.py  health.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_foundation.py  0002_auth.py  0003_catalog.py  0004_favorites_cart.py  0005_checkout_reservations.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_session_flow.py  test_catalog_api.py  test_catalog_logic.py  test_checkout_api.py  test_commerce_api.py  test_config.py  test_health.py  test_models.py  test_permissions.py  test_schema_validation.py  test_telegram_auth.py
docs/: CATALOG_V3.md  CHECKOUT_V5.md  COMMERCE_V4.md  FOUNDATION.md  RAILWAY.md  SESSION_AUTH_FIX_V041.md
frontend/: Caddyfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  routes.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/shared/: router.tsx  scroll.ts
frontend/tests/: catalog-logic.test.mjs  checkout-v5.test.mjs  commerce-v4.test.mjs  component-contracts.test.mjs  session-auth.test.mjs  smoke.test.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend
tests/: README.md
(+52 files in other folders)
